--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ li a {
     color: #bbb;
     text-align: center;
     padding: 23px 23px;
-    text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
 }
@@ -39,6 +38,10 @@ li a:hover:not(.active) {
 
 .active {
     color: #EB5550;
+}
+
+a {
+    text-decoration: none;
 }
 
 /* IDs */
@@ -79,6 +82,18 @@ li a:hover:not(.active) {
     position: relative;
 }
 
+#footer {
+    background-image: url("../img/img_4.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    float: left;
+    position: relative;
+}
+
 /* Classes */
 
 .title {
@@ -89,7 +104,7 @@ li a:hover:not(.active) {
 }
 
 .opaque {
-    background:rgba(15,15,25, 0.75);
+    background:rgba(15,15,25, 0.65);
     width: 100%;
     height: 100%;
     float: left;
@@ -124,10 +139,26 @@ li a:hover:not(.active) {
     right: 0;
     left: 0;
     bottom: 0;
-    border-right: 1px solid #e1e1f5;
-    border-bottom: 1px solid #e1e1f5;
+    border-right: 1px solid #eee;
+    border-bottom: 1px solid #eee;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.arrow_up {
+    content: "";
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    margin: auto;
+    top: -480px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    border-right: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    -webkit-transform: rotate(-135deg);
+    transform: rotate(-135deg);
 }
 
 .button {
@@ -147,6 +178,70 @@ li a:hover:not(.active) {
     transition: all .5s ease;
 }
 
+.link {
+    position: relative;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 300;
+    color: #bbb;
+    -webkit-transition: color .2s ease;
+    transition: color .2s ease;
+    padding: 3px 0;
+    margin-bottom: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+}
+
+.link:hover {
+    color: #fff;
+}
+
+.link:hover::after,
+.link:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.link::after,
+.link::before {
+    content: '';
+    position: absolute;
+    top: calc(100% + 5px);
+    width: 0;
+    right: 0;
+    height: 2px;
+}
+
+.link::before {
+    -webkit-transition: width .4s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+    transition: width .4s cubic-bezier(0.51, 0.18, 0, 0.88) .1s;
+    background: #00B9FF;
+}
+
+.link::after {
+    -webkit-transition: width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+    transition: width .2s cubic-bezier(0.29, 0.18, 0.26, 0.83);
+    background: #EB5550;
+}
+
+.copyright {
+    width: 100%;
+    height: 10%;
+    /*background-color: rgba(15,15,25,0.35);*/
+    position: absolute;
+    top: 90%;
+    left: 0%;
+    text-align: center;
+}
+
+.copyright p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    color: #ccc;
+}
+
+/* Mobile Query */
+
 @media(max-width: 768px) {
     nav {
         display: none;
@@ -154,6 +249,10 @@ li a:hover:not(.active) {
     
     .arrow_down {
         top: 420px;
+    }
+    
+    .arrow_up {
+        top: -320px;
     }
     
     .title {
@@ -169,6 +268,19 @@ li a:hover:not(.active) {
 
     .content p {
         font-size: 18px;
+    }
+    
+    .copyright {
+        height: 18%;
+        top: 82%;
+    }
+    
+    .copyright p {
+        font-size: 14px;
+    }
+    
+    .copyright p .link {
+        font-size: 14px;
     }
 
     .button {
@@ -187,8 +299,13 @@ li a:hover:not(.active) {
     }
 }
 
+/* Landscape Query */
+
 @media(max-width: 768px) and (orientation: landscape) {
     .arrow_down {
-        display:none;
+        display: none;
+    }
+    .arrow_up {
+        display: none;
     }
 }
